feat: delete entities and change all the other classes