@@ -1,5 +1,8 @@
 package registre.service;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -9,10 +12,7 @@ import registre.dto.CodesListExternalLinkDto;
 import registre.entity.CodesListEntity;
 import registre.repository.CodesListRepository;
 
-import java.util.ArrayList;
-import java.util.List;
 import java.util.Optional;
-import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -26,10 +26,13 @@ class CodesListPublicationServiceIntegrationTest {
     @Autowired
     private CodesListRepository repository;
 
+    @Autowired
+    private ObjectMapper objectMapper;
+
     @Test
     void testCreateAndFetchCodesList() {
         CodesListDto dto = new CodesListDto();
-        dto.setContent(new ArrayList<>());
+        dto.setContent(objectMapper.createArrayNode());
         String id = service.createCodesList(dto);
 
         Optional<CodesListEntity> entity = repository.findById(id);
@@ -40,62 +43,55 @@ class CodesListPublicationServiceIntegrationTest {
     @Test
     void testUpdateContentAndVerify() {
         CodesListDto dto = new CodesListDto();
-        dto.setContent(new ArrayList<>());
+        dto.setContent(objectMapper.createArrayNode());
         String id = service.createCodesList(dto);
 
-        CodeDto code = new CodeDto();
-        code.setId("code1");
-        code.setLabel("Label1");
-        service.updateContent(id, List.of(code));
+        ObjectNode codeNode = objectMapper.createObjectNode();
+        codeNode.put("id", "code1");
+        codeNode.put("label", "Label1");
+
+        service.updateContent(id, objectMapper.createArrayNode().add(codeNode));
 
         CodesListEntity updated = repository.findById(id).orElseThrow();
-        assertEquals(1, updated.getContent().size());
-        assertEquals("code1", updated.getContent().getFirst().getId());
+        JsonNode content = updated.getContent();
+        assertNotNull(content);
+        assertTrue(content.isArray());
+        assertEquals(1, content.size());
+        assertEquals("code1", content.get(0).get("id").asText());
     }
 
     @Test
     void testUpdateExternalLink() {
         CodesListDto dto = new CodesListDto();
-        dto.setContent(new ArrayList<>());
+        dto.setContent(objectMapper.createArrayNode());
         String id = service.createCodesList(dto);
-
-        CodesListEntity entity = repository.findById(id).orElseThrow();
-        MetadataEntity metadata = new MetadataEntity();
-        metadata.setId(UUID.randomUUID());
-        entity.setMetadata(metadata);
-
-        repository.save(entity);
 
         CodesListExternalLinkDto link = new CodesListExternalLinkDto();
         link.setVersion("vX");
 
         service.updateExternalLink(id, link);
+
         CodesListEntity updated = repository.findById(id).orElseThrow();
-        assertNotNull(updated.getMetadata());
-        assertNotNull(updated.getMetadata().getExternalLink());
-        assertEquals("vX", updated.getMetadata().getExternalLink().getVersion());
-    }
-
-    static class SearchConfig {
-        public String type;
-
-        public SearchConfig(String type) {
-            this.type = type;
-        }
+        assertEquals("vX", updated.getExternalLinkVersion());
     }
 
     @Test
     void testUpdateSearchConfiguration() {
         CodesListDto dto = new CodesListDto();
-        dto.setContent(new ArrayList<>());
+        dto.setContent(objectMapper.createArrayNode());
         String id = service.createCodesList(dto);
 
-        SearchConfig config = new SearchConfig("simple");
+        ObjectNode configNode = objectMapper.createObjectNode();
+        configNode.put("type", "simple");
 
-        service.updateSearchConfiguration(id, config);
+        service.updateSearchConfiguration(id, configNode);
 
         CodesListEntity updated = repository.findById(id).orElseThrow();
-        assertNotNull(updated.getSearchConfiguration());
-        assertTrue(updated.getSearchConfiguration().getJsonContent().contains("simple"));
+        JsonNode searchConfig = updated.getSearchConfiguration();
+
+        assertNotNull(searchConfig);
+        assertTrue(searchConfig.has("type"));
+        assertEquals("simple", searchConfig.get("type").asText());
+        assertTrue(searchConfig.has("id"));
     }
 }
